adding all templates

--- a/views/contact.edge
+++ b/views/contact.edge
@@ -1,5 +1,5 @@
-@layout('layouts.app)
-@section('content)
+@layout('layouts.app')
+@section('content')
 <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
     <div class="overlay"></div>
