--- a/views/post.edge
+++ b/views/post.edge
@@ -1,5 +1,9 @@
-@layout('layouts.app)
-@section('content)
+@layout('layouts.app')
+@section('content')
+
+
+
+
 <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/post-bg.jpg')">
     <div class="overlay"></div>
