--- a/views/newPost.edge
+++ b/views/newPost.edge
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <form  action="./store" method="POST" >
+        <form  action="./store" method="POST" enctype="multipart/form-data">
 
 
           <div class="cotrol-group">
@@ -34,8 +34,8 @@
 
           <div class="cotrol-group">
             <div class="form-group-floating-label-form-group controls">
-              <label for="">Description :</label>
-              <input type="text" name="description" class="form-control" placeholder="Description">
+              <label for="">Subtitle :</label>
+              <input type="text" name="subtitle" class="form-control" placeholder="Description">
             </div>
           </div>
 
@@ -48,9 +48,16 @@
             
           </div>
 
+          <div class="form-group mt-5">
+              <input type="file" name="image" class="form-cotrol-file">
+            </div>
+
           <div class="form-group text-center my-4">
                 <button class="btn btn-primary">Create Post</button>
           </div>
+
+
+          
         </form>
       </div>
     </div>
