--- a/views/register.edge
+++ b/views/register.edge
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <form  action="./users/register" method="POST" enctype="multipart/form-data">
+        <form  action="../users/register" method="POST" enctype="multipart/form-data">
 
 
           <div class="cotrol-group">
