--- a/views/register.edge
+++ b/views/register.edge
@@ -21,6 +21,14 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
+      @if(errors.length >0)
+        <ul class="list-group">
+          @each(error in errors)
+            <li class="list-group-item text-danger">{{error}}</li>
+          @endeach
+
+        </ul>
+      @endif
       <div class="col-md-8 offset-md-2">
         <form  action="../users/register" method="POST" enctype="multipart/form-data">
 
