--- a/views/layouts/app.edge
+++ b/views/layouts/app.edge
@@ -52,12 +52,18 @@
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
           </li>
+          @if(!auth)
           <li class="nav-item">
             <a class="nav-link" href="/auth/register">Register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/auth/login">Login</a>
           </li>
+          @else
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/logout">logout</a>
+          </li>
+          @endif
         </ul>
       </div>
     </div>
