--- a/views/register.edge
+++ b/views/register.edge
@@ -36,21 +36,21 @@
           <div class="cotrol-group">
             <div class="form-group-floating-label-form-group controls">
               <label for="">Username :</label>
-              <input type="text" name="username" class="form-control" placeholder="Ur Username">
+            <input type="text" name="username" value="{{data.username || ''}}" class="form-control" placeholder="Ur Username">
             </div>
           </div>
 
           <div class="cotrol-group">
             <div class="form-group-floating-label-form-group controls">
               <label for="">Email :</label>
-              <input type="text" name="email" class="form-control" placeholder="Ur Email">
+              <input type="text" name="email" value="{{data.email || ''}}" class="form-control" placeholder="Ur Email">
             </div>
           </div>
 
           <div class="cotrol-group">
             <div class="form-group-floating-label-form-group controls">
               <label for="">Password : </label>
-              <input type="password" name="password" class="form-control" placeholder="Password">
+              <input type="password" name="password" value="{{data.password || ''}}" class="form-control" placeholder="Password">
             </div>
           </div>
 
